# rmafni

./: .gitignore  .travis.yml  README
doc/SphinxDocs/: demotoc1.rst  fatcattoc1.rst  glossary.rst  sumatoc1.rst
doc/SphinxDocs/FATCAT/: DealingWithGrads.rst  FATCAT_All.rst  MakingROIs.rst
doc/SphinxDocs/SUMA/auto_inc/: SurfCont_help.inc
doc/SphinxDocs/installations/FATCAT_Demo/: DealingWithGrads.rst
src/: CMakeLists.txt  CMakeLists_apps.txt  CMakeLists_libs.txt  plug_crender.c
src/3DEdge/src/: CMakeLists.txt
src/SUMA/: CMakeLists.txt
src/coxplot/: CMakeLists.txt
src/netcdf-3.5.0/src/: macros.make
src/ptaylor/: CMakeLists.txt
src/python_scripts/: CMakeLists.txt
src/rickr/: CMakeLists.txt
