PROJECT(3DEdge)

SET(SOURCES
 connexe.c convert.c extrema.c iopnm.c recbuffer.c recline.c zcross.c
)

ADD_LIBRARY(3DEdge ${SOURCES})
TARGET_LINK_LIBRARIES(3DEdge m)

INSTALL(TARGETS 3DEdge
  RUNTIME DESTINATION ${AFNI_INSTALL_BIN_DIR} COMPONENT Runtime
  LIBRARY DESTINATION ${AFNI_INSTALL_LIB_DIR} COMPONENT Runtime
  ARCHIVE DESTINATION ${AFNI_INSTALL_LIB_DIR} COMPONENT Development)
